# freeleirix

./: .env.example  .gitignore  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
src/: main.rs  schema.rs
src/config/: auth.rs  database.rs
src/models/: projects.rs  users.rs
src/routes/: projects.rs  users.rs
